Added: - packet validation - context - packet downloader - patch process